Bug 345740 - Black square icon for menu entry if no icon specified
Summary: Black square icon for menu entry if no icon specified
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Menu (Kicker) (show other bugs)
Version: 5.2.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-04-01 00:56 UTC by Jonathan Liu
Modified: 2015-04-02 12:31 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Liu 2015-04-01 00:56:39 UTC
If no icon is specified for a menu entry or the icon is missing, it shows a black square for the icon instead of the generic fallback icon (paper with question mark icon). This is occuring after https://projects.kde.org/projects/frameworks/kiconthemes/repository/revisions/b0a6df6fbd9117b41a7f4e3bc861e20fbadb1956 was committed. Before the commit, it shows the generic fallback icon correctly.

Reproducible: Always

Steps to Reproduce:
1. Right-click the KDE menu icon and click Edit Applications
2. Click New Item
3. Enter "Fallback Icon Test" for Name field
4. Enter "konsole" for Command field
5. Click Save
6. Click the KDE menu icon and navigate to the newly added menu entry

Actual Results:  
The menu entry should show the generic fallback icon.

Expected Results:  
The menu entry shows a black square as the icon.
Comment 1 Eike Hein 2015-04-01 01:09:24 UTC
Oliver, have a look please.
Comment 2 Eike Hein 2015-04-01 13:59:13 UTC
I added explicit fallbacks to Kicker's fromTheme calls in aa08cd4 now. I'm a bit disappointed this is no longer handled by the lib (even if it was only handled as side-effect of a bug :), but it looks like our hands are tied by the documented behavior of fromTheme() and the fd.o spec not explicitly mentioning the "unknown" icon - even if our platform plugin were to mix it in, it would be wrong for app code to code against that since it can't rely on other plugins doing so.
Comment 3 Marco Martin 2015-04-02 12:28:53 UTC
Git commit 9ba1ef4777aae9a2492f9960d5fc46b3a6415d85 by Marco Martin.
Committed on 02/04/2015 at 12:25.
Pushed by mart into branch 'master'.

iexplicitly fallback to unknown icon

as in kicker, we have to manually fallback now

M  +2    -2    applets/kickoff/core/applicationmodel.cpp
M  +3    -3    applets/kickoff/core/models.cpp

http://commits.kde.org/plasma-desktop/9ba1ef4777aae9a2492f9960d5fc46b3a6415d85
Comment 4 Marco Martin 2015-04-02 12:31:30 UTC
last commit was inteded to close #345783