iexplicitly fallback to unknown icon

as in kicker, we have to manually fallback now
BUG:345740